--- a/namespace/values.yaml
+++ b/namespace/values.yaml
@@ -10,7 +10,7 @@ backups:
 contact:
   organization: TI
   group: Chimera
-  email: jeremy.henage@siemens.com
+  email: test@example.com
 
 quota:
   hard:
