--- a/namespace/values.yaml
+++ b/namespace/values.yaml
@@ -64,3 +64,4 @@ tier: Production ## Dev|Production|Critical
 ##   This is the base group that should be used. Ex: if "group-base=chimera", users in the keycloak group "chimera" will have read-only access to this namespace. 
 ##   Users in the group "chimera/chimera-admin" will have admin access to this namespace.
 keycloakGroupBase: "blah"
+keycloakBaseGroup: "blah"
