--- a/namespace/fleet.yaml
+++ b/namespace/fleet.yaml
@@ -1,8 +1,9 @@
 defaultnamespace: chimera-loki
 helm:
   releaseName: loki-namespace
-  repo: ""
-  chart: ""
+  repo: "http://134.209.123.139:8082/artifactory/helm"
+  chart: "namespace"
+  version: 2.0.0
   values:
     contact:
       organization: TI
