--- a/two/fleet.yaml
+++ b/two/fleet.yaml
@@ -12,13 +12,13 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: ""
+  chart: "guestbook"
 
   # An https to a valid Helm repository to download the chart from
-  repo: ""
+  repo: "http://134.209.123.139:8082/artifactory/helm/"
 
   # Used if repo is set to look up the version of the chart
-  version: ""
+  version: "0.0.0"
 
   # Force recreate resource that can not be updated
   force: false
