--- a/two/fleet.yaml
+++ b/two/fleet.yaml
@@ -15,7 +15,7 @@ helm:
   chart: "guestbook"
 
   # An https to a valid Helm repository to download the chart from
-  repo: "http://134.209.123.139:8082/artifactory/helm/"
+  repo: "http://134.209.123.139:8082/artifactory/helm"
 
   # Used if repo is set to look up the version of the chart
   version: "0.0.0"
